<resources>
    <string name="app_name">Food Donation</string>
    <string name="headline">Feeding Hunger, Saving Lives</string>
    <string name="signin">Signin</string>
    <string name="mobile_number">Mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="donate">Donate</string>
    <string name="name">Name:</string>
    <string name="food_name">Food Name:</string>
    <string name="food_available_for">Food Available Quantity:</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="cell">Cell:</string>
    <string name="persons">Persons</string>
    <string name="options">Options</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_food_name">Enter Food name</string>
    <string name="your_location">Your Location</string>
    <string name="village">Village</string>
    <string name="donate_food">Donate Food</string>
    <string name="submit">Submit</string>
    <string name="delete_ac">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="india_country_code">+91</string>
    <string name="edit_donation">Edit Donation</string>
    <string name="refresh">Refresh</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="auto_delete_msg">Your post will deleted after 24 hours</string>
    <string name="call">Call</string>
    <string name="report">Report</string>
    <string name="fake">Fake</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="drug">Drug</string>
    <string-array name="units">
        <item>Items</item>
        <item>Kilograms</item>
    </string-array>
</resources>