<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/background"
    android:layout_height="match_parent"
    tools:context=".donate">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/donate_food"
        android:textColor="@color/custom_purple"
        android:textSize="30sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:id="@+id/donor_name"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/food_name"
        android:autofillHints="false"
        android:hint="@string/enter_food_name"
        android:inputType="textPersonName"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/food_available_for"
        android:id="@+id/food_available"
        android:autofillHints="false"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/unit"
            android:entries="@array/units"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/your_location"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/district"
            android:entries="@array/districts"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/city"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:id="@+id/address"
        android:autofillHints="postalAddress | postalCode"
        android:inputType="textPostalAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:id="@+id/mobile"
        android:autofillHints="false"
        android:hint="@string/mobile_number" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/purple_500"
        app:backgroundTint="@color/purple_500"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:id="@+id/submit_donate"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/auto_delete_msg"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>