<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".primary">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/district"
            android:entries="@array/districts"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/city"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
<androidx.recyclerview.widget.RecyclerView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/donated"/>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner"
            android:backgroundTint="@color/purple_500"
            app:backgroundTint="@color/purple_500"
            android:text="@string/donate"
            android:id="@+id/donate"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/refresh"
        android:id="@+id/refresh"
        android:layout_margin="1dp"
        android:layout_gravity="center_vertical"
        android:background="@color/gray_white"
        android:contentDescription="@string/refresh"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/settings"
        android:id="@+id/settings"
        android:layout_margin="1dp"
        android:background="@color/gray_white"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/options"/>
    </LinearLayout>
</LinearLayout>